package fr.eni.bookhub.enumeration;

public enum EtatExemplaireEnum {
    NEUF,
    BON,
    ABIME,
    PERDU
}