package fr.eni.bookhub.enumeration;

public enum RoleEnum {
    ROLE_USER,
    ROLE_ADMIN,
    ROLE_LIBRARIAN;
}
