package fr.eni.bookhub.enumeration;

public enum StatutEnum {
    EN_COURS,
    RETARDE,
    RETOURNE
}